2007-08-06  Dustin J. Mitchell <dustin@zmanda.com>
	* example/DLT-A4.ps example/Makefile.am: add new template contributed
	  by Terry Burton <tez@terryburton.co.uk>.

2007-08-01  Dustin J. Mitchell <dustin@zmanda.com>
	Patch by Satya Ganga <gsat@zmanda.com>
	* server-src/amcleanup.sh.in: shell-compatibility fixes for bash-2.03
	  (Solaris 8)

2007-07-31  Dustin J. Mitchell <dustin@zmanda.com>
	* common-src/statfs-test.c common-src/statfs.c common-src/statfs.h
	  common-src/Makefile.am: Add a statfs-test to make sure that
	  statfs works on target systems.

2007-07-27  Ian Turner <ian@zmanda.com>
	* restore-src/amfetchdump.c: Check for required arguments in
	  all cases.

2007-07-27  Dustin J. Mitchell <dustin@zmanda.com>
	* config/automake/check-perl.am: new automake fragment to check perl scripts
	* config/automake/check-shell.am: new automake fragment to check shell scripts
	* configure.in changer-src/Makefile.am client-src/Makefile.am dumper-src/Makefile.am
	  server-src/Makefile.am common-src/Makefile.am: use new checks
	* changer-src/chg-lib.sh.in: add newline for Solaris's 'bash'
	* changer-src/chg-chs.sh.in changer-src/chg-mcutil.sh.in: fix errors found by
	  new checks

2007-07-26  Ian Turner <ian@zmanda.com>
	* restore-src/restore.c: If tpchanger is not defined, then (duh)
	  don't use the changer. This patch by Jean-Louis Martineau 
	  <martineau@zmanda.com>.

2007-07-24  Dustin J. Mitchell <dustin@zmanda.com>
	* changer-src/chg-lib.sh.in common-src/amanda-sh-lib.sh.in
	  configure.in common-src/Makefile.am: new general-purpose
	  shell-script library
	* configure.in: check for prog 'gettext'
	* changer-src/chg-null.sh.in
	  changer-src/chg-manual.sh.in changer-src/chg-disk.sh.in
	  changer-src/chg-juke.sh.in changer-src/chg-rait.sh.in
	  changer-src/chg-chs.sh.in changer-src/chg-mcutil.sh.in
	  amplot/amplot.sh.in client-src/patch-system.sh.in
	  server-src/amcheckdb.sh.in server-src/amverifyrun.sh.in