@@ -1,3 +1,8 @@
+2007-08-09  Dustin J. Mitchell <dustin@zmanda.com>
+	Patch by C R Ritson <c.r.ritson@newcastle.ac.uk>
+	* server-src/amverifyrun.sh.in: "lock" the logfile by creating a 
+	  symlink.
+
 2007-08-06  Dustin J. Mitchell <dustin@zmanda.com>
 	* example/DLT-A4.ps example/Makefile.am: add new template contributed
 	  by Terry Burton <tez@terryburton.co.uk>.
